--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -6,9 +6,9 @@
     z-index: 1;
     position: absolute;
     display: flex;
-    top: 0;
+    top: 88px;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - (88px + 126px));
     border-radius: 5px;
     align-content: center;
     flex-wrap: wrap;
@@ -41,8 +41,8 @@
     overflow: hidden;
     display: inline-block;
     background: transparent;
-    border-radius: 10px;
-    border: var(--border);
+    /* border-radius: 10px; */
+    /* border: var(--border); */
     box-shadow: var(--box-shadow);
     animation: show 0.4s ease;
 }
@@ -179,7 +179,7 @@ video {
 }
 
 video:hover {
-    opacity: 0.8;
+    /* opacity: 0.8; */
 }
 
 video:fullscreen {
