--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=Comfortaa:wght@500&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&display=swap');
 
 /*--------------------------------------------------------------
@@ -78,18 +77,40 @@ html[data-theme='dark'] {
 
 html,
 body {
+    margin: 0;
+    padding: 0;
     top: 0 !important;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     background: var(--control-bg);
-    /* background: url('../images/background.jpg'); */
+}
+
+body::-webkit-scrollbar-track {
+    background-color: var(--control-bg);
+    border-radius: 15px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: var(--body-bg);
+    border-radius: 15px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: #21242a;
+}
+
+body::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
 }
 
 h1,
 h2,
 h3,
-h4 {
+h4,
+p {
     margin: 0;
 }
 
@@ -115,28 +136,64 @@ a {
 # Loading...
 --------------------------------------------------------------*/
 
-#loadingDiv {
-    color: #fff;
-    padding: 30px;
-    text-align: center;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.7);
+#globalLoader {
+    width: 100%;
+    height: 100vh;
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: var(--control-bg);
 }
-#loadingDiv h1 {
-    padding: 10px;
-    font-size: 60px;
-    font-family: 'Plus Jakarta Sans';
-    border-radius: 10px;
+
+.global-loader-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-#loadingDiv img {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    border-radius: 10px;
+
+.connecting-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.02em;
 }
-#loadingDiv pre {
-    padding: 10px;
-    font-family: 'Plus Jakarta Sans';
-    border-radius: 10px;
+
+#globalLoader .loader {
+    width: 32px;
+    height: 32px;
+    border: 4.7px solid #141418;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+#globalLoader .loader::after {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    border: 4.7px solid transparent;
+    border-bottom-color: var(--main-color);
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 /*--------------------------------------------------------------
@@ -154,6 +211,7 @@ a {
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
+    padding-bottom: 30px;
 }
 
 .video-box {
@@ -172,7 +230,7 @@ a {
     width: 100%;
 }
 
-.video-box span {
+.video-box > span {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -182,6 +240,10 @@ a {
     line-height: 24px;
     letter-spacing: -0.02em;
     color: #ffffff;
+}
+
+.audio-box {
+    display: none;
 }
 
 .init-common {
@@ -198,6 +260,7 @@ a {
     margin-bottom: 24px;
     font-size: 16px;
     line-height: 24px;
+    padding-bottom: 5px;
 }
 
 .init-input-error-box {
@@ -221,13 +284,6 @@ a {
     letter-spacing: -0.02em;
 }
 
-#initInputName:placeholder {
-    color: #828282;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-}
-
 #initSubmitButton {
     background: linear-gradient(105.88deg, #4f22c8 0%, #8c6be6 100%, #8c6be6 100%), #2e2e36;
     font-weight: 700;
@@ -245,11 +301,31 @@ a {
     transform: translateX(-50%);
 }
 
-.init-buttons-box button,
-#initSettingButton {
+.init-buttons-box > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+
+.init-buttons-box p {
+    display: none;
+}
+
+.init-buttons-box button {
     width: 48px;
     height: 48px;
-    transition: all 0.3s ease-in-out;
+    background: #2c2c39;
+    transition: opacity 0.3s ease-in-out, color 0.3s ease-in-out;
+    border-radius: 50%;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.circle-button {
+    width: 48px;
+    height: 48px;
+    transition: opacity 0.3s ease-in-out, color 0.3s ease-in-out;
     background: #2c2c39;
     border-radius: 50%;
     font-size: 20px;
@@ -296,21 +372,147 @@ a {
     cursor: pointer;
 }
 
-.circle-button {
-    width: 48px;
-    height: 48px;
-    transition: all 0.3s ease-in-out;
-    background: #2c2c39;
-    border-radius: 50%;
-    font-size: 20px;
+.init-user button:hover {
+    /* color: white; */
+    /* background-color: rgb(35, 35, 35); */
+    transform: scale(1);
+    opacity: 0.9;
     cursor: pointer;
 }
 
-.init-user button:hover {
-    /* color: white; */
-    background-color: rgb(35, 35, 35);
-    transform: scale(1);
-    cursor: pointer;
+@media (max-width: 768px) {
+    .connecting-box {
+        flex-direction: row;
+    }
+
+    .room-header {
+        display: none !important;
+    }
+
+    #initUser {
+        top: 167px;
+    }
+
+    #initInputName {
+        margin-bottom: 16px;
+    }
+
+    .video-box > span {
+        display: none;
+    }
+
+    #initSettingButton {
+        display: none;
+    }
+
+    .video-box video {
+        width: calc(50% - 8px);
+        height: 108px;
+        border-radius: 12px;
+        background: #141418;
+    }
+
+    .audio-box:before {
+        content: '';
+        width: calc(50% - 8px);
+        height: 108px;
+        border-radius: 12px;
+        background: #141418;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .video-box {
+        background: transparent;
+        display: flex;
+        gap: 16px;
+        flex: 1 1;
+        min-height: 108px;
+        margin-bottom: 32px;
+    }
+
+    .audio-box {
+        display: block;
+        background: #141418;
+        width: calc(50% - 8px);
+        max-height: 108px;
+        border-radius: 12px;
+    }
+
+    .init-buttons-box {
+        bottom: 0;
+        left: 0;
+        transform: none;
+        width: 100%;
+    }
+
+    .init-buttons-box p {
+        text-align: center;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 22px;
+        display: inline-block;
+        max-width: 82px;
+    }
+
+    .init-audio-button-box {
+        position: absolute;
+        left: 24%;
+        transform: translate(-50%, 0px);
+        bottom: 10px;
+    }
+
+    .init-video-button-box {
+        position: absolute;
+        right: 24%;
+        transform: translate(50%, 0px);
+        bottom: 10px;
+    }
+
+    .init-buttons-box button {
+        width: 36px;
+        height: 36px;
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .init-limit-text {
+        margin: 24px 0 95px;
+    }
+}
+
+/*--------------------------------------------------------------
+# Input
+--------------------------------------------------------------*/
+
+.input-box {
+    /* border-radius: 12px;
+    height: 56px;
+    width: 100%;
+    padding: 13px 18px; */
+    position: relative;
+}
+
+.input-box label {
+    position: absolute;
+    pointer-events: none;
+    left: 18px;
+    top: 15px;
+    transition: 0.2s ease all;
+    color: #828282;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.input-box input:focus ~ label,
+.input-box input:valid ~ label {
+    top: -1px;
+    font-size: 12px;
+    color: #ababaf;
 }
 
 /*--------------------------------------------------------------
@@ -331,6 +533,8 @@ a {
     display: flex;
     flex-direction: column;
     gap: 12px;
+    overflow-y: auto;
+    max-height: 95vh;
 }
 
 .popup-title {
@@ -535,10 +739,66 @@ input:checked + .slider:before {
     display: flex;
 }
 
+.header-burger {
+    display: none;
+    position: relative;
+    width: 28px;
+    height: 19px;
+}
+
 @media (max-width: 768px) {
+    .header {
+        padding: 16px;
+        height: 56px;
+        grid-template-columns: 160px 28px;
+        justify-content: space-between;
+    }
+
     .header-nav {
         display: none;
     }
+
+    .header-burger {
+        display: block;
+    }
+
+    .header-logo {
+        width: 106px;
+    }
+}
+
+.header-burger span,
+.header-burger:before,
+.header-burger:after {
+    content: '';
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, bottom 0.3s ease-in-out;
+}
+.header-burger span {
+    top: 8px;
+}
+
+.header-burger:before {
+    top: 0px;
+}
+.header-burger:after {
+    bottom: 0px;
+}
+
+.header-burger.active:before {
+    transform: rotate(45deg);
+    top: 8px;
+}
+.header-burger.active:after {
+    transform: rotate(-45deg);
+    bottom: 8px;
+}
+.header-burger.active span {
+    transform: scale(0);
 }
 
 .header-nav a {
