main screen members

--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -2,21 +2,29 @@
 # Video grid
 --------------------------------------------------------------*/
 
+.video-conteiner-box {
+    position: relative;
+    width: 100%;
+}
+
 #videoMediaContainer {
     z-index: 1;
     position: absolute;
     display: flex;
-    top: 88px;
+    top: 0;
     width: 100%;
     height: calc(100vh - (88px + 126px));
-    border-radius: 5px;
-    align-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    vertical-align: middle;
     overflow: hidden;
-    /* border: 3px solid blue; */
+}
+
+@media (max-width: 768px) {
+    #videoMediaContainer {
+        top: 0;
+        height: 100vh;
+    }
+    .Camera {
+        height: 100vh !important;
+    }
 }
 
 #videoPinMediaContainer {
@@ -36,15 +44,13 @@
 
 .Camera {
     position: relative;
-    vertical-align: middle;
-    align-self: center;
     overflow: hidden;
     display: inline-block;
-    background: transparent;
-    /* border-radius: 10px; */
-    /* border: var(--border); */
-    box-shadow: var(--box-shadow);
-    animation: show 0.4s ease;
+    background: #191a1c;
+    margin: 0 !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* .Camera:hover {
@@ -120,13 +126,15 @@
     top: 0;
     left: 0;
     padding: 10px;
-    background: rgba(0, 0, 0, 0.2);
+    /* background: rgba(0, 0, 0, 0.2); */
     font-size: small;
     font-weight: bold;
     text-align: center;
     width: 100%;
     cursor: default;
     overflow: hidden;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.68) 100%);
+    display: none;
 }
 
 .videoMenuBar input,
@@ -167,14 +175,14 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    border-radius: '10px';
+    /* border-radius: '10px'; */
 }
 
 video {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: var(--videoObjFit);
-    border-radius: 10px;
+    /* border-radius: 10px; */
     cursor: pointer;
 }
 
